--- a/client/src/index.css
+++ b/client/src/index.css
@@ -64,3 +64,14 @@
     @apply bg-background text-foreground;
   }
 }
+@layer utilities{
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+.no-scrollbar {
+    -ms-overflow-style: none; 
+    scrollbar-width: none; 
+}
+  
+}
